--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^3.0.5",
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
+    "connect-history-api-fallback": "^1.6.0",
     "connect-multiparty": "^2.2.0",
     "express": "^4.16.4",
     "path": "^0.12.7",
