--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Location Information API",
   "main": "app.js",
   "scripts": {
-    "start": "node server/app.js",
+    "start": "cd server && npm install && node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
