--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "techslope",
-  "version": "1.0.0",
-  "description": "Location Information API",
+  "name": "propertyusage",
+  "version": "1.0.1",
+  "description": "Location information API",
   "main": "app.js",
   "scripts": {
-    "start": "cd server && npm install && node app.js",
+    "start": "cd client && npm install && npm run build && cd ../server && npm install && node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
