--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "server",
-  "version": "1.0.0",
+  "name": "propertyusage_server",
+  "version": "1.0.1",
   "description": "Backend for API",
   "main": "server.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
