--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node server/app.js",
+    "installProject": "cd client && npm install && cd ../server && npm install",
+    "dev": "cd client && npm serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
