--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,12 @@
   "dependencies": {
     "@mdi/font": "^2.6.95",
     "axios": "^0.18.0",
-    "google-maps": "^3.3.0",
     "register-service-worker": "^1.6.2",
     "roboto-fontface": "*",
     "rss-parser": "^3.7.0",
-    "save": "^2.3.3",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.10.6",
     "vuetify": "^1.5.5",
     "vuex": "^3.0.1"
   },
